# sign-language-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.hydra/: config.yaml  hydra.yaml
config/: config.yaml
config/data_load/: data_load.yaml
config/logging/: logging.yaml
config/model/: model.yaml
config/training/: training.yaml
models/: model.onnx
sign_language_classifier/data_load/: download_data.py
sign_language_classifier/data_load/outputs/2026-02-13/00-58-30/.hydra/: config.yaml  hydra.yaml
sign_language_classifier/data_load/outputs/2026-02-13/01-01-07/.hydra/: config.yaml  hydra.yaml
sign_language_classifier/infer/: infer.py
sign_language_classifier/modules/: data.py  model.py  onnx_compilation.py  trainer.py
sign_language_classifier/train/: train.py
sign_language_classifier/train/.hydra/: config.yaml  hydra.yaml
