[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sign-language-classifier"
version = "0.1.0"
description = "CNN sign language classifier using PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "dvc-gdrive>=3.0.1",
    "gdown>=5.2.0",
    "lightning==2.1.0",
    "numpy>=1.20",
    "opencv-python>=4.5",
    "pytorch-lightning>=2,<2.6",
    "pyyaml>=5.1",
    "torch>=2",
    "torchmetrics[detection]",
    "mlflow>=3.9.0",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.24.1",
    "onnxscript>=0.6.2",
    "scipy==1.15.2",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.black]
line-length = 90
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 90
skip_gitignore = true

[tool.flake8]
max-line-length = 90
ignore = "D100"
extend-ignore = "E203, W503, D100"
max-complexity = 12
exclude = [
    ".cache",
    ".venv",
    "venv"
]
